k8s/services/04_lb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    cert-manager.io/cluster-issuer: cummings-online-local-issuer
  name: cummings-online-ingress
  namespace: cummings-online-local
spec:
  rules:
    - host: netbox.cummings-online.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: netbox
                port:
                  number: 80
    - host: awx.cummings-online.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: awx-service
                port:
                  number: 80
    - host: argocd.cummings-online.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - secretName: netbox-tls
      hosts:
       - netbox.cummings-online.local
    - secretName: awx-tls
      hosts:
       - awx.cummings-online.local
    - secretName: argocd-tls
      hosts:
       - argocd.cummings-online.local
